k8s/backend-blue.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend-blue
spec:
  replicas: 2
  # CORRECTED: The selector only uses the common 'app: backend' label now
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
        version: blue     # <--- Kept for tracking/debugging
        traffic: active   # <--- Service selects this!
    spec:
      containers:
      - name: backend
        image: rahimxp/ecommerce-backend:1.0 
        ports:
        - containerPort: 9000
