k8s/frontend-blue.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend-blue
spec:
  replicas: 2
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
        version: blue
        traffic: active   # <-- Initial LIVE traffic label
    spec:
      containers:
      - name: frontend
        # Pin this to your known good image
        image: rahimxp/ecommerce-frontend:1.0 
        ports:
        - containerPort: 80 # Assuming your frontend serves on port 80
