k8s/frontend-green.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend-green
spec:
  replicas: 2
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
        version: green
        traffic: staging  # <-- Initial STAGING traffic label
    spec:
      containers:
      - name: frontend
        # Placeholder for the NEW image
        image: rahimxp/ecommerce-frontend:1.0 
        ports:
        - containerPort: 80
