k8s/frontend.yml
# k8s/frontend.yml

apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend-deployment
spec:
  replicas: 2
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
      - name: frontend
        image: rahimxp/ecommerce-frontend:1.0 # Your image from Docker Hub
        ports:
        - containerPort: 80 # Nginx default port

---
apiVersion: v1
kind: Service
metadata:
  name: frontend-service
spec:
  type: LoadBalancer # This type makes it accessible from outside the cluster
  selector:
    app: frontend
  ports:
    - protocol: TCP
      port: 80 # External traffic will come in on port 80
      targetPort: 80 # Traffic will be sent to the container's port 80
